--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "vim/bundle/Align"]
 	path = vim/bundle/Align
 	url = https://github.com/vim-scripts/Align.git
+[submodule "vim/bundle/desert.vim"]
+	path = vim/bundle/desert.vim
+	url = https://github.com/fugalh/desert.vim.git
